[package]
name = "led-calendar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
toml = "0.8.22"
serde = "1"
chrono = "0.4"
google-calendar3 = "6.0"
tokio = { version = "1.44", features = ["full"] }
badgemagic = { git = "https://github.com/fossasia/badgemagic-rs", rev = "44222843", features = ["embedded-graphics"] }
